--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -12,13 +12,18 @@ project(SoftcoverApp VERSION 0.001)
 FILE(GLOB APP_SOURCES ${APP_SOURCE_DIR}/*.c)
 
 # target definition
-add_library(softcover_app MODULE ${APP_SOURCES} ${COMMON_SOURCES})
-target_link_libraries(softcover_app PUBLIC softcover_common)
+add_library(${SOFTCOVER_APP_FILENAME} MODULE ${APP_SOURCES} ${COMMON_SOURCES})
 
-target_compile_features(softcover_app PRIVATE c_std_99)
+set_target_properties(${SOFTCOVER_APP_FILENAME} PROPERTIES PREFIX "")
+set_target_properties(${SOFTCOVER_APP_FILENAME} PROPERTIES OUTPUT_NAME ${SOFTCOVER_APP_FILENAME})
+set_target_properties(${SOFTCOVER_APP_FILENAME} PROPERTIES SUFFIX "")
 
-target_include_directories(softcover_app PUBLIC
+target_link_libraries(${SOFTCOVER_APP_FILENAME} PUBLIC softcover_common)
+
+target_compile_features(${SOFTCOVER_APP_FILENAME} PRIVATE c_std_99)
+
+target_include_directories(${SOFTCOVER_APP_FILENAME} PUBLIC
     $(APP_SOURCE_DIR)
 )
 
-add_dependencies(softcover_app copy_assets)
+add_dependencies(${SOFTCOVER_APP_FILENAME} copy_assets)
